--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,6 +20,12 @@
             "request": "launch",
             "type": "dart",
             "flutterMode": "release"
+        },
+        {
+            "name": "Android",
+            "request": "launch",
+            "type": "dart",
+            "deviceId": "android"
         }
     ]
 }
