--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_localizations: 
     sdk: flutter
   shared_preferences: ^2.0.17
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
