--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
     sdk: flutter
   shared_preferences: ^2.0.17
   http: ^0.13.5
+  mockito: ^5.3.2
 
 dev_dependencies:
   flutter_test:
